Edited the footer to have region specific comments

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -16,8 +16,8 @@
         <tr>
           <td align="center" style="padding:24px;">
             <p style="Margin:0; font-size:14px; line-height:1.6; color:#666666; font-family:Arial,sans-serif;">
-              You received this email because you are subscribed to Modo Energy's Weekly Dispatch: Europe & GB Edition.
-              If a friend forwarded you this message, <a href="https://share-eu1.hsforms.com/1kDKOqrBjTpGU82n__HV7dQexu3k" style="color:#00A4BD; text-decoration:underline;">sign up here</a> to get it in your inbox.
+              You received this email because you are subscribed to Modo Energy's Weekly Dispatch: {region_name} Edition.
+              If a friend forwarded you this message, <a href="https://share-eu1.hsforms.com/1kDKOqrBjTpGU82n__HV7dQexu3k?utm_campaign=59993286-USA%20BESS%20Briefing&utm_source=hs_email&utm_medium=email&_hsenc=p2ANqtz-9NDOltbquN3ydVnndzlf55V9RzBzJ1-KFYlpJAmu66RRqg0UENqoTG_v08hNUnhrt9V184" style="color:#00A4BD; text-decoration:underline;">sign up here</a> to get it in your inbox.
             </p>
           </td>
         </tr>
